# plugin-for-addon

./: .clang-format  .gitignore  LICENSE.txt  README.md  build.bat  plugin.sln
src/: VersionInfo.h
src/Plugin/: CMakeLists.txt  config.h  main.cpp  patches.cpp  plugin.def  plugin.rc  plugin.vcxproj  plugin.vcxproj.filters  resource.h
src/Shared/: Common.cpp  Common.h  Hook.cpp  Hook.h  Patcher.h
src/Shared/hde/: hde32.c  hde32.h
